fix(slider): align tick marks correctly with track
Tick marks were slightly misaligned with the track and not centered with
the thumb due to an added shifted size.
This commit fixes the issue by reducing the shifted size instead of
applying it to the ticks.

--- a/src/components/slider/_slider.scss
+++ b/src/components/slider/_slider.scss
@@ -80,13 +80,12 @@ $_transition: 200ms cubic-bezier(0.22, 0.61, 0.36, 1);
   &__inactive-ticks,
   &__active-ticks {
     $_ticks-size: calc(map.get($_slider, 'ticks-size') / 2);
-    $_shiftted: 0.5px;
 
     display: block;
     background-image: radial-gradient(
-      circle at calc($_ticks-size + $_shiftted),
-      currentcolor $_ticks-size,
-      transparent calc($_ticks-size + $_shiftted)
+      circle at $_ticks-size,
+      currentcolor calc($_ticks-size - 0.5px),
+      transparent $_ticks-size,
     );
     background-size: 10% 100%;
     background-position: calc(-1 * $_ticks-size) center;
